fixed companyInfo spacing and global size/spacing of h1,h2,h3

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -13,25 +13,36 @@ html {
 }
 
 body {
-  // font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 14px;
   background-color: $lt-tan;
   position: relative;
   height: 100%;
   min-width: 320px;
 
-  #root, div, span, p {
-    font-family: 'Montserrat';
+  #root, div, p, h1, h2, h3, h4, tr {
+    font-family: 'Montserrat', sans-serif, arial;
   }
 }
 
-h1 {
+h1, h2, h3, h4 {
   margin-top: 0px;
   margin-bottom: 10px;
 }
 h2 {
   font-size: 20px;
   font-weight: 600;
+}
+h3 {
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+tr {
+  line-height: 18px;
+}
+h3.biz-address {
+  margin-bottom: 0;
 }
 .pure-g {
   letter-spacing: normal; //override bug in pure
@@ -140,8 +151,8 @@ span.unchecked {
 }
 
 .info-container {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 3%;
+  margin: 0 auto;
 }
 
 .user-info-container {
@@ -219,11 +230,21 @@ img.company-result {
   border-radius: 5px;
 }
 img.company {
-  max-width: 350px;
+  width: 100%;
+  min-width: 275px;
   border-radius: 5px;
-  float:right;
 }
+.company-info-reviews-container {
+  max-width:300px;
 
+  .reviews-container {
+    width: 175px;
+    display:inline-block;
+  }
+  span.drink-type-imgs-container {
+    display: inline-block;
+  }
+}
 span > img.drink-type {
   position: relative;
   top: 15px;
